syntax = "proto3";

package evm.tokens.native.balances.v1;
import "proto/v1/algorithm.proto";

message Events {
  repeated Transfer transfers = 1;
  repeated BalanceChange balance_changes = 2;
}

message BalanceChange {
  // -- transaction --
  bytes transaction_id = 5;

  // -- ordering --
  uint64 ordinal = 10; // storage_change.ordinal or balance_change.ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- balance change --
  bytes owner = 21;
  string old_balance = 22;
  string new_balance = 23;

  // -- debug --
  evm.tokens.algorithm.v1.Algorithm algorithm = 99;
  string reason = 100; // balance_changes.reason
}

message Transfer {
  // -- transaction --
  optional bytes transaction_id = 5;

  // -- ordinal --
  uint64 ordinal = 10; // log.ordinal or call.begin_ordinal or trx.begin_ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- transfer --
  bytes from = 21;
  bytes to = 22;
  string value = 23;

  // -- debug --
  evm.tokens.algorithm.v1.Algorithm algorithm = 99;
  string reason = 100; // balance_changes.reason
}
